# passphrase

./: Cargo.toml  README.md  build.rs
lists/: metadata.json
src/: casing.rs  cli.rs  list.rs  logging.rs  main.rs
src/list/: logic.rs  model.rs
