cargo-features = ["edition"]

[package]
name = "passphrase"
version = "1.0.0"
authors = ["Kyle Clemens <git@kyleclemens.com>"]

build = "build.rs"

edition = "2018"

[dependencies]
rand = "0.5"
clap = "2"
lazy_static = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
atty = "0.2"
log = "0.4"

[build-dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
