[package]
name = "passphrase"
version = "1.1.0"
authors = ["Kyle Clemens <passphrase@kyleclemens.com>"]

build = "build.rs"

edition = "2018"

[dependencies]
rand = "0.5"
clap = "2"
lazy_static = "1"
serde = "1"
serde_derive = "1"
rmp-serde = "0.13"
atty = "0.2"
log = "0.4"
xz2 = "0.1"

[build-dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
rmp-serde = "0.13"
xz2 = "0.1"
